# framework.web.wrt-service

./: CMakeLists.txt  wrt-service.manifest
packaging/: wrt-service.spec
src/: CMakeLists.txt
src/common/: CMakeLists.txt  access-control.cpp  access-control.h  native-context.cpp  native-context.h  native-plugin.h  wrt-common-native.pc.in
src/js/: wrt-service.js
src/node/: CMakeLists.txt  dlog.cpp  gcontext.cpp  gcontext.h  native-node.cpp  native-node.h  native-plugin-loader.cpp  native-plugin-loader.h  service-util.cpp  tizen-appfw.cpp  tizen-appfw.h
